# src/Admin/sucursales/infrastructure/controllers/ExampleGETController.php
@@ -1,12 +1,0 @@
-<?php
-
-namespace Src\Admin\sucursales\infrastructure\controllers;
-
-use App\Http\Controllers\Controller;
-
-final class ExampleGETController extends Controller { 
-
- public function index() { 
- // TODO: DDD Controller content here 
- }
-}
